@@ -14,6 +14,9 @@
        rounding the time to 1 second.
      * when the transfer is finished calculate the actual total speed
        rather than the current speed which is given during the transfer
+   - markus@cvs.openbsd.org 2003/12/02 17:01:15
+     [channels.c session.c ssh-agent.c ssh.h sshd.c]
+     use SSH_LISTEN_BACKLOG (=128) in listen(2).
 
 20031208
  - (tim) [configure.ac] Bug 770. Fix --without-rpath.
@@ -1552,4 +1555,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3134 2003/12/09 08:07:13 dtucker Exp $
+$Id: ChangeLog,v 1.3135 2003/12/09 08:15:11 dtucker Exp $
